# python-todo-list

./: Dockerfile  README.md  docker-compose.yml  example.env  install_dependencies.py  pyproject.toml
src/todo_list/: app.py  models.py
tests/: test_test.py
