[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-list"
description = "A web-based todo list built on FastAPI and SQLAlchemy."
authors = [{ name = "thegamecracks" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastapi==0.92.0",
    "pydantic>=1.10.5,<2",
    "sqlalchemy>=2.0.4,<3",
    "uvicorn==0.20.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/thegamecracks/python-todo-list"

[tool.setuptools.dynamic]
version = { attr = "todo_list.__version__" }
